# XW-Studio

./: .env.example  .gitignore  CLAUDE.md  DAILY_BUSINESS_GO_LIVE_SUMMARY.md  README.md  alembic.ini  pyproject.toml  run_xw_studio.cmd
.github/workflows/: ci.yml
Markdowns/: copilot_remaining_phases.md  umbau auf pyside6 und verbesserungen.txt  uva_integration_umbau_skizze.md
config/: default.yaml
docs/: copilot_migration_plan.md  daily_business_migration_final_report.md  daily_business_parity_analysis.md  daily_business_parity_test_results.md  multi_pc_betriebsleitfaden.md  phase_master_daily_rechnungen.md  product_pipeline_masterplan.md  product_pipeline_phases.yaml  rechnungen_umbauphasen_autonom.md  recommendations_and_quick_wins.md  sevdesk_daily_business_analysis.md  sevdesk_daily_business_quick_reference.md  umbau_checkliste_prioritaet.md  umsetzung_phasen_todo.md  xw_copilot_outlook_integration.md
resources/themes/: dark.qss  light.qss
scripts/: build_resources.py
src/xw_studio/: __init__.py  __main__.py  app.py  bootstrap.py
tests/: __init__.py  conftest.py
tests/expected/: UVA 02-26.txt  UVA 03-26.txt
tests/integration/: test_daily_business_live.py  test_rechnungen_rapid_switch.py
tests/ui/: test_main_window_smoke.py  test_rechnungen_download_links.py  test_rechnungen_search.py  test_rechnungen_view_smoke.py
tests/unit/: test_cache.py  test_calculation_service.py  test_clickup_client.py  test_config.py  test_container.py  test_crm_matching.py  test_crm_merge.py  test_daily_business_parity.py  test_daily_business_parity_clean.py  (+34 more)
(+138 files in other folders)
