[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xw-studio"
version = "0.1.0"
description = "XeisWorks Studio — PySide6 desktop application for music publishing business management"
requires-python = ">=3.11"
authors = [{name = "Bernhard Holl", email = "bernhard.holl@gmx.at"}]

dependencies = [
    "PySide6>=6.6",
    "qt-material>=2.14",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "PyMuPDF>=1.24",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "segno>=1.6",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "openai>=1.0",
    "rapidfuzz>=3.0",
    "lxml>=5.0",
    "zeep>=4.2",
    "python-stdnum>=1.20",
    "msal>=1.28",
    "cryptography>=42.0",
    "pywin32>=306; sys_platform == 'win32'",
    "tqdm>=4.66",
    "tzdata>=2024.1",
    "icalendar>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
xw-studio = "xw_studio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
